# pypasswordmanager

./: .gitignore  MANIFEST.in  README.rst  crypto.py  login.py  main.py  ops.py  pyproject.toml
docs/source/: conf.py  conf.py~  index.rst  index.rst~  main_doc.rst  modules.rst~
src/pypasswordmanager/: __main__.py  crypto.py  datahelper.py  login.py  main.py  ops.py
