[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypasswordmanager"
version = "1.0.0"
description = "Encrypted password manager for the terminal"
readme = "README.rst"
requires-python = ">=3.7.0"
dependencies = ["cryptography"]
license = {file = "LICENSE"}
authors = [
    {name = "Victor Angelo", email = "vichangelo1373@gmail.com"}
]
keywords = ["cryptography", "password", "utilities"]
classifiers = [
    "Development status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/vichangelo/pypasswordmanager/"
"Bug Reports" = "https://github.com/vichangelo/pypasswordmanager/issues/"
"Source" = "https://github.com/vichangelo/pypasswordmanager/"

[project.scripts]
pypasswordmanager = "pypasswordmanager.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
